Minor fixes to set things rolling.

--- a/AppLauncher/MainWindow.xaml
+++ b/AppLauncher/MainWindow.xaml
@@ -21,7 +21,7 @@
         ShowInTaskbar="False"
         IsTabStop="False"
         
-        Topmost="True">
+        Topmost="False">
     
     <Grid>
         
